# hermitcrab

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  recording.json  run-build-checks.sh
.github/workflows/: run_tests.yml
cassettes/: test_end_to_end.json
dockerimage/: Dockerfile  setup-ssh.sh  start.sh
dockerimage/basic/: Dockerfile  build.sh
dockerimage/miniwdl/: Dockerfile  README.md
dockerimage/with-docker/: Dockerfile  build.sh
hermitcrab/: __init__.py  config.py  gcp.py  main.py  ssh.py  tunnel.py
hermitcrab/command/: create.py  create_service_account.py  delete.py  down.py  gcr_grant.py  status.py  up.py  update_ssh.py  version.py
hermitcrab/deploy_scripts/: suspend_on_idle.py
mkvm/: cloudinit  go.sh
mkvolume/: cloudinit  create-vol.sh
tests/: conftest.py
tests/hermitcrab/: gcloud_vcr.py  test_check_gcloud_calls.py  test_docker_image_parsing.py  test_end_to_end.py  test_up_status.py
