[tool.poetry]
name = "hermitcrab"
version = "2.4.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pyyaml = "^6.0.2"
setuptools = "^75.6.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.301"
pytest = "^7.2.2"
black = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hermit="hermitcrab.main:main"
